--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^0.1.9
   kakao_flutter_sdk: ^0.4.2
+  flutter_line_sdk: ^1.3.0
   provider: ^4.1.3
   cloud_firestore: ^0.13.7
   firebase_auth: ^0.16.1
