--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,6 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^0.1.9
   kakao_flutter_sdk: ^0.4.2
-  flutter_line_sdk: ^1.3.0
   provider: ^4.1.3
   cloud_firestore: ^0.13.7
   firebase_auth: ^0.16.1
@@ -59,6 +58,7 @@ flutter:
     - assets/images/five.jpg
     - assets/images/kakao_login_icon.png
     - assets/images/naver_login_icon.png
+    - assets/images/google_login_icon.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
