--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -58,5 +58,26 @@
 	<string>Used to capture audio for image picker plugin</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Used to demonstrate image picker plugin</string>
+
+	<key>CFBundleURLTypes</key> 
+	<array> 
+		<dict> 
+			<key>CFBundleURLSchemes</key> 
+			<array> 
+				<string>fb587393778816616</string> 
+			</array> 
+		</dict> 
+	</array> 
+	<key>FacebookAppID</key> 
+	<string>587393778816616</string> 
+	<key>FacebookDisplayName</key> 
+	<string>honeytoon</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-share-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
 </dict>
 </plist>
