login 처리 streamBuilder 추가

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -79,5 +79,13 @@
 		<string>fbauth2</string>
 		<string>fbshareextension</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Permission photo library</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Permission camera</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Permission for video</string>
+	<key>NSAllowsArbitraryLoads</key>
+	<true/>
 </dict>
 </plist>
