--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   firebase_auth: ^0.16.1
   http: ^0.12.1
   multi_image_picker: ^4.6.7
-
+  image_picker: ^0.6.7+4
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
