--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>912177811917-lcqph0s5fttlc62bnpd8bid79l70dr13.apps.googleusercontent.com</string>
+	<string>1054367129510-s6cn476k7e0egvv03q7vvr584e467kip.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.912177811917-lcqph0s5fttlc62bnpd8bid79l70dr13</string>
+	<string>com.googleusercontent.apps.1054367129510-s6cn476k7e0egvv03q7vvr584e467kip</string>
 	<key>API_KEY</key>
-	<string>AIzaSyALyYNWUlIug1gSPwE4GUwDXg0SamJ2HY0</string>
+	<string>AIzaSyA8wZNZvLik3InVDZ3JlItt72D2d2gqOcs</string>
 	<key>GCM_SENDER_ID</key>
-	<string>912177811917</string>
+	<string>1054367129510</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.jeonghyun.honeytoon</string>
 	<key>PROJECT_ID</key>
-	<string>honey-toon</string>
+	<string>honeytoon-server</string>
 	<key>STORAGE_BUCKET</key>
-	<string>honey-toon.appspot.com</string>
+	<string>honeytoon-server.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:912177811917:ios:9cdf0f54c70234ab1a3484</string>
+	<string>1:1054367129510:ios:cd4dc9612149bb0e407967</string>
 	<key>DATABASE_URL</key>
-	<string>https://honey-toon.firebaseio.com</string>
+	<string>https://honeytoon-server.firebaseio.com</string>
 </dict>
 </plist>
