--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   http: ^0.12.1
   multi_image_picker: ^4.6.7
   image_picker: ^0.6.7+4
+  firebase_storage: ^3.1.6
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
