--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   multi_image_picker: ^4.6.7
   image_picker: ^0.6.7+4
   firebase_storage: ^3.1.6
+  uuid: ^2.2.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
